fixes letter spacing

--- a/src/styles/sass/_genesis-sale.scss
+++ b/src/styles/sass/_genesis-sale.scss
@@ -3,4 +3,8 @@
 }
 body.genesis-sale-page {
   background: #282828;
+  letter-spacing: 0;
+  & h1, h2, h3, h4, h5, h6 {
+    letter-spacing: 0;
+  }
 }
